Fix Safari CSS overflow bug in demo

--- a/packages/suspense-website/src/examples/demos/rendering-status-while-fetching/style.module.css
+++ b/packages/suspense-website/src/examples/demos/rendering-status-while-fetching/style.module.css
@@ -81,6 +81,7 @@
   border-top-right-radius: 0.25rem;
   border-bottom-right-radius: 0.25rem;
   padding: 0.25rem 0.5rem;
+  overflow: auto;
 }
 
 .Placeholder {
